--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -470,4 +470,11 @@
   note = {Accedido: 2024-09-12}
 }
 
+@online{asana2024,
+  author = {{Asana}},
+  title = {¿Qué es Kanban?},
+  year = {2024},
+  url = {https://asana.com/es/resources/what-is-kanban},
+  note = {Accedido: 2024-09-12}
+}
 
