--- a/anexos.tex
+++ b/anexos.tex
@@ -62,7 +62,7 @@
     \end{itemize}
 
     \item \textbf{Señas Chapinas}
-    Señas Chapinas es una aplicación para traducción de Lensegua (Lengua de Señas Guatemalteco) a texto o voz.
+    Es una aplicación para traducción de LENSEGUA (Lengua de Señas Guatemalteco) a texto o voz.
     \begin{itemize}
         \item ¿Qué tan relevante consideras una aplicación de traducción de lengua de señas para tu vida diaria?
         \begin{itemize}
@@ -128,7 +128,7 @@
     \end{itemize}
 
     \item \textbf{Señas Chapinas}
-    Señas Chapinas es una aplicación para traducción de LENSEGUA a texto o voz.
+    Es una aplicación para traducción de LENSEGUA a texto o voz.
     \begin{itemize}
         \item ¿Cuándo usarías la aplicación?
     \end{itemize}
